--- a/INDEX.html
+++ b/INDEX.html
@@ -6,6 +6,6 @@
 <body>
 </body>
 </html>
-<br><a href="file:///C:/Users/%D0%9121%20%D0%93%D0%BE%D0%BB%D1%96%D0%B9%20%D0%91%D0%BE%D0%B3%D0%B4%D0%B0%D0%BD/Desktop/%D0%9B%D0%A0%2014/Mediateka.html">Натисни на мене</a>
-<br><a href="file:///C:/Users/%D0%9121%20%D0%93%D0%BE%D0%BB%D1%96%D0%B9%20%D0%91%D0%BE%D0%B3%D0%B4%D0%B0%D0%BD/Desktop/%D0%9B%D0%A0%2014/socmereji.html">Тут цікаво</a>
-<br><a href="file:///C:/Users/%D0%9121%20%D0%93%D0%BE%D0%BB%D1%96%D0%B9%20%D0%91%D0%BE%D0%B3%D0%B4%D0%B0%D0%BD/Desktop/%D0%9B%D0%A0%2014/kontaktni%20dani.html">Завітайте до нас</a>
+<br><a href="/Mediateka.html">РќР°С‚РёСЃРЅРё РЅР° РјРµРЅРµ</a>
+<br><a href="socmereji.html">РўСѓС‚ С†С–РєР°РІРѕ</a>
+<br><a href="kontaktni%20dani.html">Р—Р°РІС–С‚Р°Р№С‚Рµ РґРѕ РЅР°СЃ</a>
