--- a/INDEX.html
+++ b/INDEX.html
@@ -6,6 +6,6 @@
 <body>
 </body>
 </html>
-<br><a href="/Mediateka.html">Натисни на мене</a>
+<br><a href="Mediateka.html">Натисни на мене</a>
 <br><a href="socmereji.html">Тут цікаво</a>
 <br><a href="kontaktni%20dani.html">Завітайте до нас</a>
