--- a/INDEX.html
+++ b/INDEX.html
@@ -4,8 +4,8 @@
 </title>
 </head>
 <body>
-<br><a href="/Mediateka.html">Натисни на мене</a>
-<br><a href="socmereji.html">Тут цікаво</a>
-<br><a href="kontaktni%20dani.html">Завітайте до нас</a>
+<br><a href="Mediateka.html">ГЌГ ГІГЁГ±Г­ГЁ Г­Г  Г¬ГҐГ­ГҐ</a>
+<br><a href="socmereji.html">Г’ГіГІ Г¶ВіГЄГ ГўГ®</a>
+<br><a href="kontaktni%20dani.html">Г‡Г ГўВіГІГ Г©ГІГҐ Г¤Г® Г­Г Г±</a>
 </body>
 </html>
